--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js -e js,hbs,css "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shopify/shopify-api": "^1.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.1.2",
     "node-fetch": "^3.0.0"
