--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
