--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@shopify/shopify-api": "^1.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.1.15",
     "hbs": "^4.1.2",
     "node-fetch": "^3.0.0",
+    "shopify-api-node": "^3.8.0",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2"
   },
