--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-spreadsheet": "^3.1.15",
+    "googleapis": "^89.0.0",
     "hbs": "^4.1.2",
     "node-fetch": "^3.0.0",
+    "nodemailer": "^6.7.0",
     "shopify-api-node": "^3.8.0",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2"
