--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nodemailer": "^6.7.0",
     "shopify-api-node": "^3.8.0",
     "socket.io": "^4.3.1",
-    "socket.io-client": "^4.3.2"
+    "socket.io-client": "^4.3.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
