--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "shopify-api-node": "^3.8.0",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
+    "unirest": "^0.6.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
