--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js -e js,hbs,css "
+    "dev": "nodemon src/app.js -e js,hbs,css ",
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
