--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-spreadsheet": "^3.1.15",
     "googleapis": "^89.0.0",
     "hbs": "^4.1.2",
+    "mongoose": "^6.1.2",
     "node-fetch": "^3.0.0",
     "nodemailer": "^6.7.0",
     "shopify-api-node": "^3.8.0",
